More responsive search bar and prevent main-container being cut off on smaller displays

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ body {
 #search {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     margin: 40px 0px 15px 0px;
     width: 100%;
@@ -144,5 +145,20 @@ a {
 @media (max-width: 600px) {
     .link-group {
         flex: 1 1 40%;
+    }
+}
+
+@media (max-width: 600px) {
+    #search-engine-cont {
+        width: 100%;
+    }
+    #search-engine-select {
+        width: 100%;
+    }
+}
+
+@media (max-height: 640px) {
+    #main-container {
+        height: 640px;
     }
 }
